css/board.css
/* ... */
.seperator-big-subtask {
    margin-right: 10px;
}

.edit-icon-board {
    margin-right: 5px;
    color: #2A3647;
}

.pen-hover-effect-div {
    display: flex;
    align-items: center;
}

.big-task-panel {
    height: 100%;
    width: 100%;
    overflow-y: auto;
    overflow-x: hidden;
    position: relative;
}

.task-category-and-cross-icon-div-edit {
    display: flex;
    justify-content: flex-end;
    margin-top: 20px;
}

.titel-edit-div {
    width: 100%;
    padding-left: 10px;
    padding-right: 10px;
    position: relative;
}

.big-task-title-edit {
    font-size: 20px;
    margin-left: 0px;
    margin-bottom: 5px;
    margin-top: 30px;
    color: #42526E;
    font-weight: 400;
}

.titel-edit-task-big {
    border-radius: 5px;
    border-width: 0.5px;
    border-color: #42526e70;
    width: 100%;
    height: 35px;
    font-weight: 500;
    padding-left: 10px;
    cursor: pointer;
}

.titel-edit-task-big:focus {
    outline: none;
    border: #29ABE2 1px solid;
}

.titel-edit-task-big::placeholder {
    margin-left: 10px;
}

.description-edit-div {
    width: 100%;
    padding-left: 10px;
    padding-right: 10px;
}

.description-headline-edit {
    font-size: 20px;
    margin-top: 30px;
    margin-bottom: 5px;
    color: #42526E;
    font-weight: 400;
}

.description-edit-task-big {
    border-radius: 5px;
    border-width: 0.5px;
    border-color: #42526e70;
    width: 100%;
    height: 100px;
    font-weight: 500;
    padding-left: 10px;
    padding-top: 5px;
    cursor: pointer;
}

.description-edit-task-big:focus {
    outline: none;
    border: #29ABE2 1px solid;
}

.due-date-edit-div {
    width: 100%;
    padding-left: 10px;
    padding-right: 10px;
}

.inputfield-due-date-container-edit-div {
    display: flex;
    position: relative;
    flex-direction: column;
}

.due-date-headline-edit {
    font-size: 20px;
    margin-top: 30px;
    margin-bottom: 5px;
    color: #42526E;
    font-weight: 400;
}

.due-date-edit-task-big {
    border-radius: 5px;
    border-width: 0.5px;
    border-color: #42526e70;
    width: 100%;
    height: 35px;
    font-weight: 500;
    padding-left: 10px;
    cursor: pointer;
    padding-right: 16px;
}

.due-date-edit-task-big:focus {
    outline: none;
    border: #29ABE2 1px solid;
}

.calendar-icon-edit-task-big {
    position: absolute;
    right: 50px;
}

.priority-edit-div {
    width: 100%;
}

.priority-bold-edit-headline {
    font-size: 20px;
    margin-top: 30px;
    margin-bottom: 5px;
    color: #42526E;
    font-weight: 400;
}

.edit-button-div {
    display: flex;
    align-items: center;
    width: 100%;
}

.urgent-edit-button-div {
    display: flex;
    align-items: center;
    justify-content: center;
    border-radius: 5px;
    background-color: #FFFFFF;
    border-width: 0.5px;
    height: 50px;
    width: 33%;
    cursor: pointer;
    border: 0.5px solid #ccc;
}

.urgent-edit-button-div:hover {
    box-shadow: 1px 4px 2px 1px rgba(13, 13, 14, 0.336);
}

.medium-edit-button-div {
    display: flex;
    align-items: center;
    justify-content: center;
    margin-left: 10px;
    border-radius: 5px;
    background-color: #FFFFFF;
    border-width: 0.5px;
    height: 50px;
    width: 33%;
    cursor: pointer;
    border: 0.5px solid #ccc;
}

.medium-edit-button-div:hover {
    box-shadow: 1px 4px 2px 1px rgba(13, 13, 14, 0.336);
}

.low-edit-button-div {
    display: flex;
    align-items: center;
    justify-content: center;
    margin-left: 10px;
    border-radius: 5px;
    background-color: #FFFFFF;
    border-width: 0.5px;
    height: 50px;
    width: 33%;
    cursor: pointer;
    border: 0.5px solid #ccc;
}

.low-edit-button-div:hover {
    box-shadow: 1px 4px 2px 1px rgba(13, 13, 14, 0.336);
}

.assigned-inputfield-box-edit-div {
    width: 100%;
    position: relative;
}

.assigned-to-edit-headline {
    font-size: 20px;
    margin-top: 30px;
    margin-bottom: 5px;
    color: #42526E;
    font-weight: 400;
}

.inputfield-text-assign-edit {
    border-radius: 5px;
    border-width: 0.5px;
    border-color: #42526e70;
    width: 100%;
    height: 35px;
    font-weight: 500;
    cursor: pointer;
    padding-left: 10px;
}

.inputfield-text-assign-edit:focus {
    outline: none;
}

.todo-box {
    display: flex;
    justify-content: space-between;
    align-items: center;
}

.inprogress-box {
    display: flex;
    justify-content: space-between;
    align-items: center;
}

.await-feedback-box {
    display: flex;
    justify-content: space-between;
    align-items: center;
}

.done-box {
    width: 98%;
    display: flex;
    justify-content: space-between;
    align-items: center;
}

.subtask-headline-edit-div {
    width: 100%;
    position: relative;
}

.subtasks-headline-edited {
    font-size: 20px;
    margin-top: 35px;
    margin-bottom: 5px;
    color: #42526E;
    font-weight: 400;
}

.inputfield-subtask-edit-div {
    border-radius: 5px;
    border-width: 0.5px;
    border-color: #42526e70;
    width: 100%;
    height: 35px;
    font-weight: 500;
    cursor: pointer;
}

.inputfield-subtask-edit-div:focus {
    outline: none;
}

.height-zero {
    height: 0px;
}

.assigned-inputfield-edit-div {
    position: relative;
    display: flex;
    align-items: center;
}

.assigned-arrow-icon-edit {
    position: absolute;
    right: 17px;
    top: 5px;
    cursor: pointer;
}

.contacts-dropdown-edit {
    display: flex;
    flex-direction: column;
    border-radius: 5px;
    border-bottom: 0.5px;
    border-right: 0.5px;
    height: 200px;
    max-height: 200px;
    width: 100%;
    box-shadow: 2px 2px 8px #42526e70;
    overflow-y: auto;
    position: absolute;
    background-color: white;
    z-index: 1;
}

.contact-option-edit {
    display: flex;
    align-items: center;
    margin-top: 10px;
    border-radius: 5px;
}

.contact-option-edit:hover {
    background-color: #f0f0f0;
    border-radius: 5px;
}

.contact-in-edit-template {
    display: flex;
}
/* ... */

